# knu_assistant

knu_assistant-main/: LICENSE  README.md  docker-compose.dev.yml  docker-compose.yml
knu_assistant-main/assistant/src/: pyproject.toml
knu_assistant-main/assistant/src/app/: __init__.py  conftest.py  database.py  utils.py
knu_assistant-main/assistant/src/app/bot/: api.py  decorators.py  keyboards.py  worker.py
knu_assistant-main/assistant/src/app/bot/commands/: __init__.py  basic.py  moderation.py  timetable.py  user.py  utils.py
knu_assistant-main/assistant/src/app/bot/commands/tests/: test_basic.py  test_moderation.py  test_timetable.py  test_user.py  test_utils.py  utils.py
knu_assistant-main/assistant/src/app/bot/dictionaries/: __init__.py  phrases.py  states.py  timetable.py  week.py
knu_assistant-main/assistant/src/app/bot/dictionaries/tests/: test_days_of_week.py  test_states.py  test_timetable.py
knu_assistant-main/assistant/src/app/bot/tests/: test_decorators.py
knu_assistant-main/assistant/src/app/core/: __init__.py  celery.py  config.py  logs.py
knu_assistant-main/assistant/src/app/tasks/: __init__.py  timetable.py
knu_assistant-main/assistant/src/app/tests/: factories.py  test_database.py
knu_assistant-main/assistant/src/app/timetable_scrapper/: test_worker.py  worker.py
knu_assistant-main/assistant/src/migrations/: alembic.ini  apply.py  env.py
knu_assistant-main/assistant/src/migrations/versions/: 02c6d479417b_init_requests.py  2606ce1554df_added_lessons_subgroups_members.py  2a96b6b05aec_added_users_is_moderator.py  3c9149132801_added_requests_is_resolved.py  59695dbfeafe_added_user_subgroups.py  7f37e6641a37_added_users_last_active.py  943f6b886942_added_lesson_link.py  a0668b6a54e6_init.py  b27b7aeb8ee6_added_singlelesson_comment.py
knu_assistant-main/assistant/src/scripts/: format.sh  lint.sh  run-bot.sh  run-celery.sh  run-migrations.sh
(+1 files in other folders)
